# rplic8

./: README.md
atlas/: Cargo.toml  README.md
atlas/shaders/: render_map.wgsl  schleier.wgsl
atlas/src/: figure_render.rs  main.rs  maprender.rs  renderpass.rs  schleier.rs  uniform.rs
generate/src/: lib.rs
generators/gaeste/: Cargo.toml
generators/gaeste/src/: lib.rs
generators/name/: Cargo.toml  names.txt
generators/name/src/: lib.rs  markov.rs  matrix.rs
generators/schatzi/: Cargo.toml  items.toml  loot_items.csv
generators/schatzi/src/: items.rs  lib.rs  money.rs
