[package]
name = "atlas"
version = "0.1.0"
edition = "2024"
description = "A map panel for roleplaying"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
cgmath = "0.18.0"
clap = { version = "4.5.48", features = ["derive"] }
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = "0.33.0"
tokio = { version = "1.47.1", features = ["tracing", "macros", "fs", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wgpu = "27.0.1"
winit = "0.30.12"
